--- a/illustration/index.html
+++ b/illustration/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>audio</title>
+    <title>illustration</title>
     <link rel="stylesheet" href="style/styles.css">
     <link rel="stylesheet" href="style/effects.css">
 </head>
